cabal-version:      3.6
name:               kobayashi
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A static site builder.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/alexacallmebaka/kobayashi/issues

-- The license under which the package is released.
-- license:
author: james
maintainer: 50460460+alexacallmebaka@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable kobayashi
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Lexer,
                   Parser,
                   KBYToken,
                   KBYDoc,
                   HTML,
                   Builder,
                   Options,
                   Error

    default-extensions: OverloadedStrings

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: TypeFamilies,
                      RecordWildCards,
                      DeriveGeneric,
                      QuasiQuotes,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      FlexibleContexts

    build-depends:    base ^>=4.16.4.0,
                      megaparsec ^>=9.3.1,
                      filepath ^>=1.4.100.3,
                      directory ^>=1.3.8.1,
                      containers ^>=0.6.7,
                      text ^>=2.0.2,
                      unordered-containers ^>=0.2.19.1,
                      hashable ^>=1.4.2.0,
                      tomland ^>=1.3.3.2,
                      path ^>=0.9.5,
                      mtl ^>= 2.3.1,
                      transformers ^>= 0.5.6.2

    hs-source-dirs:   app
    default-language: Haskell2010
