cabal-version:      3.8
-- ^note: this is the version of the .cabal spec, NOT of cabal itself.
-- see: https://cabal.readthedocs.io/en/stable/file-format-changelog.html
name:               kobayashi
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A static site builder.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/alexacallmebaka/kobayashi/issues

-- The license under which the package is released.
-- license:
author: james
maintainer: 50460460+alexacallmebaka@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable kobayashi
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Lexer,
                   Parser,
                   Token,
                   Document,
                   Html,
                   Builder,
                   Options,
                   Error

    default-extensions: OverloadedStrings

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: TypeFamilies,
                      RecordWildCards,
                      DeriveGeneric,
                      QuasiQuotes,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      FlexibleContexts

    -- no version constraints, we just let cabal figure things out.
    build-depends:    base,
                      megaparsec,
                      filepath,
                      directory,
                      containers,
                      text,
                      unordered-containers,
                      hashable,
                      tomland,
                      path,
                      mtl,
                      transformers,
                      parser-combinators

    hs-source-dirs:   app
    default-language: Haskell2010
